--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -70,12 +70,14 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "# arima\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "from pmdarima.arima import auto_arima\n",
+    "from pmdarima.arima.utils import nsdiffs\n",
     "import datetime\n",
     "import warnings\n",
-    "\n",
+    "# plot\n",
     "import plotly.graph_objects as go\n",
     "import plotly.graph_objects as go\n",
     "from plotly.offline import init_notebook_mode, iplot\n",
@@ -110,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.info()"
@@ -576,7 +580,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "get_probility_of_Severity('City')"
@@ -1021,31 +1027,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tìm ra model tốt nhất với tập train đầu vào và chu kì của mùa vụ là m\n",
+    "    + auto_arima sẽ chị ra các giá trị p,q để có được mô hình tốt nhất với tiêu chí là AIC\n",
+    "    (Mô hình có AIC nhỏ hơn nói chung sẽ tốt hơn)\n",
+    "    + Sau khi đã tìm ra được mô hình ARIMA tốt nhất. Chúng ta sẽ dự báo cho khoảng thời gian tiếp theo.\n",
+    "    Dự báo cho chuỗi thời gian khá đặc thù và khác biệt so với các lớp mô hình dự báo khác vì giá trị time step \n",
+    "    liền trước sẽ được sử dụng để dự báo cho time step liền sau.\n",
+    "##### Sử dụng auto_arima để tìm ra model tốt nhất với các siêu tham số như sau:\n",
+    "    + Các giá trị p, q sẽ được chạy từ [start_p,max_p], [start_q,max_q]\n",
+    "    + m : là giá trị mùa vụ( nghĩa là cứ sau m thì sẽ hình thành một chu kì mới).\n",
+    "    + seasonal = True : để chỉ arima sử dung dự đoán có tính mùa vụ.\n",
+    "    + Chọn d=0\n",
+    "    + Chọn D từ model nsdiffs của arima\n",
+    "    + Phương pháp điều chỉnh mô hình stepwise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tìm ra model tốt nhất với tập train đầu vào và chu kì của mùa vụ là m\n",
-    "'''Tham khảo: https://phamdinhkhanh.github.io/2019/12/12/ARIMAmodel.html\n",
-    "              https://otexts.com/fpp2/seasonal-arima.html\n",
-    "              \n",
-    " + auto_arima sẽ chị ra các giá trị p,q để có được mô hình tốt nhất với tiêu chí là AIC\n",
-    "    (Mô hình có AIC nhỏ hơn nói chung sẽ tốt hơn)\n",
-    " + Sau khi đã tìm ra được mô hình ARIMA tốt nhất. Chúng ta sẽ dự báo cho khoảng thời gian tiếp theo.\n",
-    "    Dự báo cho chuỗi thời gian khá đặc thù và khác biệt so với các lớp mô hình dự báo khác vì giá trị time step \n",
-    "    liền trước sẽ được sử dụng để dự báo cho time step liền sau.\n",
-    "'''\n",
     "def best_model(train,m):\n",
+    "    D = nsdiffs(train,m=m,max_D = 12, test= 'ocsb')\n",
     "    model_sarima = auto_arima(train, start_p=0, start_q=0,\n",
     "                           max_p=7, max_q=7, m=m,\n",
     "                           start_P=0, seasonal=True,\n",
-    "                           d=1, D=1, trace=True,\n",
+    "                           d=0, D=D, trace=True,\n",
     "                           error_action='ignore',  \n",
     "                           suppress_warnings=True, \n",
     "                           stepwise=True)\n",
-    "    return model_sarima\n",
-    "\n",
+    "    return model_sarima"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Độ lỗi\n",
     "def _measure_metric(y, y_pred):\n",
     "    e = y-y_pred\n",
     "    mse=np.mean(e**2)\n",
